frontend/myapp/src/pages/index.less
* {
  padding: 0;
  margin: 0;
  outline: none;
  border: none;
}
.body_user {
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  background-image: url(../../public/assert/user.png);
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center center;
  background-attachment: fixed;
}
.timeline {
  display: grid;
  grid-template-columns: 1.5fr 1fr;
  grid-gap: 20px;
}
.container_timeline{
  background: #ffffff;
  padding: 20px;
  border-radius: 5px;
  width: 400px;
  height: 325px;
  max-width: 90%;
  margin: auto;
  box-shadow: 0px 0px 10px rgba(0,0,0,0.1);
}
.container_intro{
  background: #ffffff;
  padding: 20px;
  border-radius: 5px;
  width: 800px;
  height: 325px;
  max-width: 90%;
  margin: auto;
  box-shadow: 0px 0px 10px rgba(0,0,0,0.1);
}
.recently_select_course{
  align-self: flex-start;
  position: relative;
  left: -4%;
}
.course-container {
  background: #ffffff;
  display: flex;
  flex-wrap: nowrap;
  overflow-x: auto;
  padding: 20px;
  border-radius: 5px;
  width: 1275px;
  height: 300px;
  max-width: 100%;
  margin: auto;
  box-shadow: 0px 0px 10px rgba(0,0,0,0.1);
  margin-bottom: 60px;
  justify-content: center; 
  align-items: center;
}
.course-Page {
  margin-top: 50px;
  display: flex;
  justify-content: center;
  
}
.course-card:not(:last-child) {
  margin-right: 70px; 
}

.course-card {
  position: relative;
  flex: 0 0 auto;
}

.overlay {
  position: absolute;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 33.33%;
  background-color: rgba(255, 255, 255, 0.5);
}

.overlay-content {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  justify-content: center;
  height: 100%;
  color: black;
  font-weight: bold;
}

.overlay-content span:first-child {
  font-size: 1em;
  position: relative;
  font-family:  'Comic Sans MS';
}

.overlay-content span:last-child {
  font-size: 1em;
  position: relative;
  font-family:  'Comic Sans MS';
}

.square-avatar {
  border-radius: 0;
}
.square-avatar-course {
  border-radius: 0;
  width: 256px;
  height: auto;
}
.biggest-box {
  max-width: 100%;
}
.search-component {
  width: 53.25%; 
  margin-right: auto;
  margin-left: 3%;
  border-radius: 20px;
  display: block;
}
.card_and_calendar{
  display: grid;
  grid-template-columns: 1.5fr 1fr;
  grid-gap: 20px;
  margin-top: 0px;
}
.card {
  padding: 20px;
  width: 800px;
  max-width: 95%;
  margin: auto;
  position: relative;
}

.custom-card {
  width: 100%;
  height: 100%;
  position: relative;
}

.custom-card:before {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: rgba(0, 0, 0, 0);
  transition: background 0.3s ease-in-out;
  pointer-events: none;
  z-index: 1;
}

.card:hover .custom-card:before {
  background: rgba(0, 0, 0, 0.2);
}

.button-container {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  display: none;
  z-index: 2;
  width: 600px;
  left: 55%;
}

.card:hover .button-container {
  display: block;
}
.button-container button {
  margin: 0 100px;
}

.intro-card .ant-card-meta-avatar {
  width: 'auto';
}
.calendar {
  background: #ffffff;
  padding: 20px;
  border-radius: 5px;
  width: 400px;
  height: 400px;
  max-width: 90%;
  margin: auto;
  box-shadow: 0px 0px 10px rgba(0,0,0,0.1);
  margin-top: 11%;
}

.calendar .ant-picker-calendar-full .ant-picker-calendar-cell {
  border: 1px solid #f0f0f0;
  padding: 5px;
}

.calendar .ant-picker-calendar-full .ant-picker-calendar-cell .ant-picker-calendar-date {
  width: 100%;
  height: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
}

.calendar .ant-picker-calendar-full .ant-picker-calendar-cell .ant-picker-calendar-date-selected {
  background: #1979fe;
  color: #fff;
}

.calendar .ant-picker-calendar-full .ant-picker-calendar-header {
  border-bottom: 1px solid #f0f0f0;
  padding-bottom: 10px;
  margin-bottom: 10px;
}

.calendar .ant-picker-calendar-full .ant-picker-calendar-header .ant-picker-calendar-month-select,
.calendar .ant-picker-calendar-full .ant-picker-calendar-header .ant-picker-calendar-year-select {
  margin: 0 5px;
}

@media (max-width: 1289px) {
  .timeline {
    grid-template-columns: 1fr;
  }
  .card_and_calendar{
    grid-template-columns: 1fr;
  }
  .container_intro {
    margin-bottom: 40px;
  }
  .container_timeline{
    background: #ffffff;
    padding: 20px;
    border-radius: 5px;
    width: 800px;
    height: 250px;
    max-width: 90%;
    margin: auto;
    box-shadow: 0px 0px 10px rgba(0,0,0,0.1);
  }
  .recently_select_course{
    align-self: flex-start;
    position: relative;
    left: -40px;
  }
  .course-container {
    width: 725px;
  }
  .search-component {
    margin-left: 7%;
    width: 85%;
  }
  .calendar {
    width: 800px;
    height: auto;
    margin-top: 30px;
  }
  .card {
    margin-top: 10px;
  }
  .button-container button {
    margin: 0 100px;
  }
  .button-container {
    left: 55%;
  }
}
@media (max-width: 769px) {
  .container_intro {
    width: 400px;
    height: 250px;
    margin-bottom: 40px;
  }
  .recently_select_course{
    align-self: flex-start;
    position: relative;
    left: -65px;
  }
  .container_timeline{
    background: #ffffff;
    padding: 20px;
    border-radius: 5px;
    width: 380px;
    height: 380px;
    max-width: 90%;
    margin: auto;
    box-shadow: 0px 0px 10px rgba(0,0,0,0.1);
  }
  .card {
    width: 430px;
  }
  .course-container {
    width: 405px;
  }
  .custom-card .ant-card-meta-avatar {
    width: 60%;
  }
  .intro-card .ant-card-meta-avatar {
    width: 60%;
  }
  .intro-card .ant-card-meta-avatar {
    width: 200px;
  }
  .card-title {
    font-size: 1em !important;
  }
  
  .card-description {
    font-size: 0.5em !important;
  }
  .calendar {
    width: 400px;
  }
  .button-container button {
    margin: 0 60px;
  }
  .button-container {
    left: 50%;
    width: 400px;
  }
  
}
@media (max-width: 400px) {
.container_timeline {
  background: #ffffff;
  padding: 20px;
  border-radius: 5px;
  width: 100%;
  height: 100%;
  max-width: 90%;
  margin: auto;
  box-shadow: 0px 0px 10px rgba(0,0,0,0.1);
}
.container_intro {
  width: 330px;
  height: 200px;
}
.recently_select_course{
  align-self: flex-start;
  position: relative;
  left: -70px;
}
.search-component {
  margin-left: 8%;
  width: 87%;
} 
.card {
  width: 390px;
  justify-content: left;
  margin-left: 2%;
}
.intro-card .ant-card-meta-avatar {
  width: 158px;
}
.card-title {
  font-size: 0.8em !important;
}

.card-description {
  font-size: 0.6em !important;
}
.course-container {
  width: 300px;
}
.calendar {
  width: 330px;
  height: 370px;
}
.button-container.show {
  left: 48%;
  width: 380px;
}
}

